# revAisor

./: .env.example  README.md  app.py  pyproject.toml
gpt/: interface.py
interfaces/: __init__.py  base.py
interfaces/gpt/: interface.py
interfaces/llama2/: interface.py
notebooks/: llama2.ipynb
utils/: __init__.py  utils.py
